# Waterfall

./: CMakeLists.txt  Makefile  MyMakefile  Waterfall.sln  cleaner.sh
Debug/: Waterfall.ilk
Debug/shaders/: render.frag  render.geom  update.geom
Linux/: Makefile  run.sh
Linux/models/: bridge.mtl
Linux/shaders/: model.frag  model.vert  particles.geom  particles.vert  render.vert  rock.frag  rock.vert  skybox.fs  update.vert
Linux/src/: common.h  model.h  particlesystem.h  skybox_main.cpp  skybox_main.cpp~  texture.h  utils.h  waterfall.cpp  waterfall.cpp~  waterfall.h  waterfall.h~
Linux/textures/desert/: readme.txt
Mac/: Makefile  SkyboxMakefile
Mac/shaders/: particles.frag  render.frag  render.geom  skybox.frag  skybox.vert  skybox.vs  update.geom
Mac/src/: GLFWContext.h  camera.cpp  common.h  main.cpp  model.cpp  particlesystem.cpp  shaders.cpp  shaders.h  skybox.h  skybox_main.cpp  texture.cpp  utils.cpp  waterfall.cpp  waterfallprogram.cpp
Mac/textures/desert/: bottom.tga  sb_desert.shader  top.tga
Waterfall/: Waterfall.vcxproj  Waterfall.vcxproj.filters  common.h  main.cpp  model.cpp  model.h  particlesystem.cpp  particlesystem.h  shaders.cpp  texture.cpp  texture.h  utils.cpp  utils.h  waterfallprogram.cpp  waterfallprogram.h
Waterfall/Debug/: vc120.idb
Waterfall/Debug/Waterfall.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Waterfall/shaders/: particles.frag  particles.geom  render.frag  render.geom  render.vert  update.geom  update.vert
Win/: Waterfall.vcxproj.filters  common.h  model.cpp  model.h  texture.h  utils.cpp  waterfallprogram.cpp  waterfallprogram.h
Win/Debug/: Waterfall.ilk
Win/Debug/shaders/: lightedtexture.vert  particles.frag  particles.geom  update.vert
Win/Waterfall/: CMakeLists.txt  Waterfall.vcxproj  Waterfall.vcxproj.filters  camera.h  common.h  light.h  lightedtexture.cpp  lightedtexture.h  main.cpp  model.cpp  model.h  particlesystem.cpp  particlesystem.h  settings.h  skybox.cpp  skybox.h  texture.cpp  texture.h  utils.cpp  utils.h  waterfall.cpp  waterfall.h  waterfallprogram.cpp
Win/Waterfall/Debug/: vc120.idb
Win/Waterfall/Debug/Waterfall.tlog/: CL.read.1.tlog  CL.write.1.tlog  Waterfall.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Win/Waterfall/shaders/: lightedtexture.frag  particles.vert  rock.frag  rock.vert  skybox.frag  skybox.vert
Win/shaders/: render.geom
resources/shaders/: update.geom
src/: common.h  main.cpp  shaders.cpp  texture.cpp  utils.h
